<resources>

    <!-- Strings for naming screens of the app. -->
    <string name="app_name">MyFridge</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings in the settings bar. -->
    <string name="action_settings">Settings</string>

    <!-- Strings for the buttons on the homescreen. -->
    <string name="homeScreenButtonScanString">Scan</string>
    <string name="homeScreenButtonRecipesString">Recipes</string>
    <string name="homeScreenButtonDealsString">Deals</string>
    <string name="homeScreenButtonFriendsString">Friends</string>
    <string name="homeScreenButtonMyFridgeString">My Fridge</string>

    <!-- Tags for the buttons on the homescreen. -->
    <string name="homeScreenButtonScanTag">Scan</string>
    <string name="homeScreenButtonRecipesTag">Recipes</string>
    <string name="homeScreenButtonDealsTag">Deals</string>
    <string name="homeScreenButtonFriendsTag">Friends</string>
    <string name="homeScreenButtonMyFridgeTag">MyFridge</string>

    <!-- Tags for the floating action buttons on the homescreen. -->
    <string name="homeScreenFloatingActionButtonEmailTag">Email</string>
    <string name="homeScreenFloatingActionButtonRefreshTag">Refresh</string>

    <!-- File locations for the icons for the homeScreen -->
    <string name="homeScreenButtonScanIconLocation">images/icons_barcode.png</string>
    <string name="homeScreenButtonRecipesIconLocation">images/icons_recipes.png</string>
    <string name="homeScreenButtonDealsIconLocation">images/icons_deals.png</string>
    <string name="homeScreenButtonFriendsIconLocation">images/icons_friends.png</string>
    <string name="homeScreenButtonMyFridgeIconLocation">images/icons_fridge.png</string>

    <!-- Strings for hints in the settings text fields. -->
    <string name="settingsScreenTextFieldEmailHint">Email Address</string>
    <string name="settingsScreenTextFieldUsernameHint">Username</string>
    <string name="settingsScreenTextFieldPasswordHint">Password</string>

    <!-- Strings for the buttons in the settings screen. -->
    <string name="settingsScreenButtonOKString">OK</string>
    <string name="settingsScreenButtonCancelString">Cancel</string>

    <!-- Strings for the textviews on the page in the sign up sheet. -->
    <string name="createUserScreenTextHello">Hello!</string>
    <string name="createUserScreenTextDescription">Looks like you\'re new here... Create an account:</string>

    <!-- Strings for hints in the create user text fields. -->
    <string name="createUserScreenTextFieldEmailHint">Email Address</string>
    <string name="createUserScreenTextFieldUsernameHint">Username</string>
    <string name="createUserScreenTextFieldPasswordHint">Password</string>

    <!-- Strings for the buttons on the create user screen. -->
    <string name="createUserScreenButtonSignUpString">Sign me up partner!</string>

    <!-- Strings for errors spread across the application -->
    <string name="errorMessageTitle">Error</string>
    <string name="errorMessageAccept">OK</string>

    <string name="errorMessageOpenScreenSecurityException">New screen failed to open, security exception.</string>
    <string name="errorMessageOpenScreenNoSuchMethodException">New screen failed to open, no such method exception.</string>
    <string name="errorMessageOpenScreenIllegalArgumentException">New screen failed to open, illegal argument exception.</string>
    <string name="errorMessageOpenScreenIllegalAccessException">New screen failed to open, illegal access exception.</string>
    <string name="errorMessageOpenScreenInvocationTargetException">New screen failed to open, invocation target exception.</string>
    <string name="errorMessageOpenScreenIconIOException">Failed to open the icon file.</string>

    <string name="errorMessageAPIConnectionRetrieveURLFailed">API Connection failed, URL may be invalid.</string>
    <string name="errorMessageAPIConnectionAPIConnectionFailed">API Connection failed, HTTPS connection failed.</string>
    <string name="errorMessageAPIConnectionOpenCertificateFailed">API Connection failed, certificate opening failed.</string>
    <string name="errorMessageAPIConnectionKeystoreInitialisationFailed">API Connection failed, adding certificate to keystore failed.</string>
    <string name="errorMessageAPIConnectionTrustManagerFactoryInitialisationFailed">API Connection failed, adding keystore to trust manager factory failed.</string>
    <string name="errorMessageAPIConnectionSSLContextInitialisationFailed">API Connection failed, initialising the SSL context failed.</string>

    <!-- Colors -->
    <color name="appDefaultBackground">#FFFFFF</color>
    <color name="appDefaultButton">#3F51B5</color>
    <color name="appDefaultTitleColour">#FF1493</color>
    <color name="appDefaultButtonPressed">#8EC127</color>

    <!-- Fonts -->
    <string name="appDefaultFontLocation">fonts/KeepCalm.ttf</string>
    <string name="title_activity_my_fridge_screen">MyFridge</string>
    <string name="title_activity_create_user">Create User</string>

</resources>
