<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/android_background_element"
    tools:context=".SettingsScreen">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_settings_screen" />

    <EditText
        android:id="@+id/settingsScreenEmailTextFieldID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/settingsScreenTextFieldEmailHint"
        android:inputType="textEmailAddress" />

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!--The scan button. -->
        <Button android:id="@+id/settingsScreenOKButtonID"
            android:tag="@string/homeScreenButtonScanTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="120dp"
            android:text="@string/settingsScreenButtonOKString"
            android:background="@drawable/rounded_corners_button"
            android:textColor="@color/appDefaultBackground"
            android:drawablePadding="0dip"
            android:singleLine="true"/>

        <!--The scan button. -->
        <Button android:id="@+id/settingsScreenCancelButtonID"
            android:tag="@string/homeScreenButtonScanTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/settingsScreenButtonCancelString"
            android:background="@drawable/rounded_corners_button"
            android:textColor="@color/appDefaultBackground"
            android:drawablePadding="0dip"
            android:singleLine="true"/>

    </FrameLayout>

    <!--</LinearLayout>-->

</android.support.design.widget.CoordinatorLayout>
